--- a/admin/Tpl/default/CommodityList/add.html
+++ b/admin/Tpl/default/CommodityList/add.html
@@ -50,11 +50,11 @@
                     <option value="1" selected="selected">是</option>
                     <option value="0">否</option>
                 </select>　
-                <strong>推　　荐：</strong>
+                <!-- <strong>推　　荐：</strong>
                 <select name="recommend" style="width: 53px;padding: 2px">
                     <option value="1">是</option>
                     <option value="0" selected="selected">否</option>
-                </select>
+                </select> -->
             </li>
             <li class="xnfy520-function-index-add-edit-ul-li" style="margin-top: 3px;">
                 <strong>售　　价：</strong>
@@ -63,6 +63,9 @@
                 <input title="值必须在0-255 (必填)" type="text" name="sort" value="99" style="width: 49px;text-align: center;height: 18px;" maxlength="3" />　
                 <strong>商品体积：</strong>
                 <input type="text" name="measure" value="0.00" style="width: 47px;text-align: center;height: 18px;" maxlength="8" />
+                　
+                <strong>销　　量：</strong>
+                <input type="text" name="sales_volume"  value="0" style="width: 50px;text-align: center;height: 18px;" maxlength="8" />
             </li>
             <li class="xnfy520-function-index-add-edit-ul-li" style="margin-top: 5px;height: 50px;background: #d6fffa;padding: 5px 0;">
                   <span class="positioning_images" style="float: left;position: relative;margin-left: 8px;width: 50px;height: 50px;display: block;padding-right: 16px;border-right: 1px dashed blue;">
