--- a/admin/Tpl/default/CommodityList/edit.html
+++ b/admin/Tpl/default/CommodityList/edit.html
@@ -44,7 +44,7 @@
                         <option value="0" selected="selected">否</option>
                     </eq>
                 </select>　
-                <strong>推　　荐：</strong>
+                <!-- <strong>推　　荐：</strong>
                 <select name="recommend" style="width: 56px;padding: 2px">
                     <eq name="data.recommend" value="1">
                         <option value="1" selected="selected">是</option>
@@ -53,7 +53,7 @@
                         <option value="1">是</option>
                         <option value="0" selected="selected">否</option>
                     </eq>
-                </select>
+                </select> -->
             </li>
             <li class="xnfy520-function-index-add-edit-ul-li" style="margin-top: 3px;">
 
@@ -62,7 +62,9 @@
                 <strong>排　　序：</strong>
                 <input title="值必须在0-255 (必填)" type="text" name="sort"  value="<{$data.sort|default=0}>" style="width: 50px;text-align: center;height: 18px;" maxlength="3" />　
                 <strong>体　　积：</strong>
-                <input type="text" name="measure"  value="<{$data.measure|default=0.00}>" style="width: 50px;text-align: center;height: 18px;" maxlength="8" />
+                <input type="text" name="measure"  value="<{$data.measure|default=0.00}>" style="width: 50px;text-align: center;height: 18px;" maxlength="8" />　
+                <strong>销　　量：</strong>
+                <input type="text" name="sales_volume"  value="<{$data.sales_volume|default=0}>" style="width: 50px;text-align: center;height: 18px;" maxlength="8" />
             </li>
             <li class="xnfy520-function-index-add-edit-ul-li" style="margin-top: 5px;height: 50px;background: #d6fffa;padding: 5px 0;">
 
