--- a/admin/Tpl/default/GrouponCommodity/add.html
+++ b/admin/Tpl/default/GrouponCommodity/add.html
@@ -31,11 +31,13 @@
                     <option value="1" selected="selected">是</option>
                     <option value="0">否</option>
                 </select>　
-                <strong>推　　荐：</strong>
+                <!-- <strong>推　　荐：</strong>
                 <select name="recommend" style="width: 53px;padding: 2px">
                     <option value="1">是</option>
                     <option value="0" selected="selected">否</option>
-                </select>
+                </select> -->
+                <strong>销　　量：</strong>
+                <input type="text" name="sales_volume"  value="0" style="width: 50px;text-align: center;height: 18px;" maxlength="10" />
             </li>
             <li class="xnfy520-function-index-add-edit-ul-li" style="margin-top: 3px;">
                 <strong>原　　价：</strong>
