--- a/admin/Tpl/default/System/configuration.html
+++ b/admin/Tpl/default/System/configuration.html
@@ -83,7 +83,7 @@
             <li class="systemt-set-li" style="vertical-align: top;">到货时间是支付尾款后几日
                 <input type="text" name="conf6" style="width:100px" value="<{$Think.config.conf6|default="5"}>" />
                 　　
-                送货上门安装服务费 <input type="text" name="conf7" style="width:100px" value="<{$Think.config.conf7|default="20"}>" />
+                <span style="display:none">送货上门安装服务费 <input type="text" name="conf7" style="width:100px" value="<{$Think.config.conf7|default="20"}>" /></span>
                 <span class="tips"></span>
             </li>
 
