--- a/admin/Tpl/default/VoteCommodity/add.html
+++ b/admin/Tpl/default/VoteCommodity/add.html
@@ -18,25 +18,31 @@
                     <option value="1" selected="selected">是</option>
                     <option value="0">否</option>
                 </select>　
-                <strong>推　荐：</strong>
+                <!-- <strong>推　荐：</strong>
                 <select name="recommend" style="width: 53px;padding: 2px">
                     <option value="1">是</option>
                     <option value="0" selected="selected">否</option>
-                </select>
+                </select> -->
+                <strong>销　　量：</strong>
+                <input type="text" name="sales_volume"  value="0" style="width: 50px;text-align: center;height: 18px;" maxlength="10" />　
+                <strong>预订基数：</strong>
+                <input type="text" name="subscribe" value="0" style="width: 47px;text-align: center;height: 18px;" maxlength="10" />　
+                <strong>已预订数：</strong>
+                <input type="text" name="subscribe_volume" value="0" style="width: 47px;text-align: center;height: 18px;" maxlength="10" />　
+                <strong>投 票 数：</strong>
+                <input type="text" name="vote" value="0" style="width: 47px;text-align: center;height: 18px;" maxlength="10" />　
             </li>
             <li class="xnfy520-function-index-add-edit-ul-li" style="margin-top: 3px;">
                 <strong>售　　价：</strong>
                     <input type="text" name="price" value="0.00" style="width: 47px;text-align: center;height: 18px;" maxlength="8" />　
-                <strong>订　金：</strong>
+                <strong>订　　金：</strong>
                 <input type="text" name="subscription" value="0.00" style="width: 47px;text-align: center;height: 18px;" maxlength="10" />　
-                <strong>预订基数：</strong>
-                <input type="text" name="subscribe" value="0" style="width: 47px;text-align: center;height: 18px;" maxlength="10" />　
-                <strong>截止日期：</strong>
-                <input type="text" name="expiration_date" class="Wdate" type="text" onfocus="WdatePicker({minDate:'%y-%M-{%d+1}'})" readonly="readonly" style="width: 90px;height: 18px;text-indent:5px" />　
-                <strong>排　序：</strong>
+                <strong>排　　序：</strong>
                 <input title="值必须在0-255 (必填)" type="text" name="sort" value="99" style="width: 49px;text-align: center;height: 18px;" maxlength="3" />　
                 <strong>商品体积：</strong>
-                <input type="text" name="measure" value="0.00" style="width: 47px;text-align: center;height: 18px;" maxlength="8" />
+                <input type="text" name="measure" value="0.00" style="width: 47px;text-align: center;height: 18px;" maxlength="8" />　
+                <strong>截止日期：</strong>
+                <input type="text" name="expiration_date" class="Wdate" type="text" onfocus="WdatePicker({minDate:'%y-%M-{%d+1}'})" readonly="readonly" style="width: 90px;height: 18px;text-indent:5px" />　
             </li>
             <li class="xnfy520-function-index-add-edit-ul-li" style="margin-top: 5px;height: 50px;background: #d6fffa;padding: 5px 0;">
                   <span class="positioning_images" style="float: left;position: relative;margin-left: 8px;width: 50px;height: 50px;display: block;padding-right: 16px;border-right: 1px dashed blue;">
@@ -83,7 +89,7 @@
                     </volist>
                 </select>
                 <span class="stylist_say" style="display:none">
-                    <input type="text" maxlength="50" style="width: 385px;margin: 0 0 0 5px;text-indent: 5px;padding: 2px;" name="stylist_say" />　
+                    <input type="text" maxlength="50" style="width: 335px;margin: 0 0 0 5px;text-indent: 5px;padding: 2px;" name="stylist_say" />　
                 </span>
             </li>
             <li class="texli" style="margin-bottom: 10px;">
