--- a/home/Tpl/default/Index/index.html
+++ b/home/Tpl/default/Index/index.html
@@ -24,8 +24,8 @@
     <div class="mid-sjs">
         <div class="sjs1">
             <ul>
-              <li class="sjs2">设计师设计的产品</li>
-              <li class="sjs3"></li>
+              <li class="sjs2">最新投票产品</li>
+              <li class="sjs3"><a href="__APP__/Vote">去投票区预定</a></li>
             </ul>
         </div>
         <notempty name="a2">
