--- a/home/Tpl/default/Member/VoteOrder.html
+++ b/home/Tpl/default/Member/VoteOrder.html
@@ -34,13 +34,13 @@ $(function(){
 </script>
 <div class="mid-xq">
     	<ul>
-          <li class="xq-weizhi">首页 >> <span style="color:#666;">个人中心</span> >> <span style="color:#666;">投票订单</span></li>
+          <li class="xq-weizhi">首页 >> <span style="color:#666;">个人中心</span> >> <span style="color:#666;">我的预订</span></li>
             <include file="Member:left" />
 
             <li class="xq-dingpiao">
 
             	<div class="wdyd">
-                	投票订单
+                	我的预订/<a href="__APP__/Member/votesOrder">投票</a>
                 </div>
                 
                 <empty name="orders">
