--- a/home/Tpl/default/Member/add_address.html
+++ b/home/Tpl/default/Member/add_address.html
@@ -15,7 +15,7 @@
                     <input type="hidden" name="where_text" />
                 </td></tr>
                 <tr class="table_tr"><th class="table_th"> 街道：</th><td class="table_td"><input type="text" name="street" /></td></tr>
-                <tr class="table_tr"><th class="table_th"> 邮编：</th><td class="table_td"><input type="text" name="zip" /></td></tr>
+                <!-- <tr class="table_tr"><th class="table_th"> 邮编：</th><td class="table_td"><input type="text" name="zip" /></td></tr> -->
                 <tr class="table_tr"><th class="table_th"> 电话：</th><td class="table_td"><input type="text" name="phone" /></td></tr>
                 <tr class="table_tr"><th class="table_th"> 手机：</th><td class="table_td"><input type="text" name="cellphone" /></td></tr>
             </table>
