--- a/home/Tpl/default/Member/edit_address.html
+++ b/home/Tpl/default/Member/edit_address.html
@@ -56,7 +56,7 @@
                     <input type="hidden" name="where_text" value="<{$adds.where_text}>" />
                 </td></tr>
                 <tr class="table_tr"><th class="table_th"> 街道：</th><td class="table_td"><input type="text" name="street" value="<{$adds.street}>" /></td></tr>
-                <tr class="table_tr"><th class="table_th"> 邮编：</th><td class="table_td"><input type="text" name="zip" value="<{$adds.zip}>" /></td></tr>
+                <!-- <tr class="table_tr"><th class="table_th"> 邮编：</th><td class="table_td"><input type="text" name="zip" value="<{$adds.zip}>" /></td></tr> -->
                 <tr class="table_tr"><th class="table_th"> 电话：</th><td class="table_td"><input type="text" name="phone" value="<{$adds.phone}>" /></td></tr>
                 <tr class="table_tr"><th class="table_th"> 手机：</th><td class="table_td"><input type="text" name="cellphone" value="<{$adds.cellphone}>" /></td></tr>
             </table>
