--- a/home/Tpl/default/Vote/schedule.html
+++ b/home/Tpl/default/Vote/schedule.html
@@ -31,7 +31,7 @@ $(function(){
       lxfEndtime();
    });
 </script>
-<div id="xm-xmm" style="margin-left:8px">首页 >> <span style="color:#666;">最新投票产品</span> >> <span style="color:#666;">预订</span></div>
+<div id="xm-xmm" style="margin-left:8px">首页 >> <span style="color:#666;">设计师产品投票区</span> >> <span style="color:#666;">预订</span></div>
   <div id="xm-zfdj1">
     	<div id="xm-wxts">
 			<strong>温馨提示：</strong>
