--- a/admin/Tpl/default/Address/edit.html
+++ b/admin/Tpl/default/Address/edit.html
@@ -49,6 +49,10 @@
                                     <label><input type="radio" checked="checked" name="start" value="0" />否</label>
                                 </eq>
                             </span>
+                            <span class="table_sort_span" style="font-weight: normal;">
+                                 <span class="table_sort_title"><span class="table_star"></span> 每立方米价格：</span>
+                                <input class="table_sort_input" type="text" name="average_price" value="<{$data.average_price}>" maxlength="10" />
+                            </span>
                         </td>
                 </tr>
                 <tr class="en-show" style="display:none"><th class="table_th"><span class="table_star"></span></th>
@@ -60,14 +64,36 @@
                             </notempty>
                         </td>
                     </tr>
-                <tr class="table_tr"><th class="table_th"><span class="table_star"></span> 起步价：</th>
+                <tr class="table_tr"><th class="table_th"><span class="table_star"></span></th>
                         <td>
-                            <span class="table_radio">
+                            <span class="table_radio" style="visibility:hidden">
                                  <input class="table_sort_input" type="text" name="initiate_price" value="<{$data.initiate_price}>" maxlength="10" />
                             </span>
                             <span class="table_sort_span" style="font-weight: normal;">
-                                 <span class="table_sort_title"><span class="table_star"></span> 每立方米价格：</span>
-                                <input class="table_sort_input" type="text" name="average_price" value="<{$data.average_price}>" maxlength="10" />
+                                <span class="table_sort_title"><span class="table_star"></span> 送货上门：</span>
+                                <span class="table_radio">
+                                    <eq name="data.dropin" value="1">
+                                        <label><input type="checkbox" checked="checked" name="dropin" value="1" />提供</label>　
+                                    <else/>
+                                        <label><input type="checkbox" name="dropin" value="1" />提供</label>　
+                                    </eq>
+                                </span>
+                            </span>
+                        </td>
+                    </tr>
+                    <tr class="table_tr"><th class="table_th"><span class="table_star"></span></th>
+                        <td>
+                            <span class="table_sort_span" style="font-weight: normal;">
+                                 <span class="table_sort_title"><span class="table_star"></span> 送货上门最低价：</span>
+                                <input class="table_sort_input" type="text" value="<{$data.dropin_lowest_price}>" name="dropin_lowest_price" value="0.00" maxlength="10" />
+                            </span>
+                        </td>
+                    </tr>
+                    <tr class="table_tr"><th class="table_th"><span class="table_star"></span></th>
+                        <td>
+                            <span class="table_sort_span" style="font-weight: normal;">
+                                 <span class="table_sort_title"><span class="table_star"></span> 送货上门每立方价格：</span>
+                                <input class="table_sort_input" type="text" value="<{$data.dropin_average_price}>" name="dropin_average_price" value="0.00" maxlength="10" />
                             </span>
                         </td>
                     </tr>
@@ -84,8 +110,12 @@
                                     <label><input type="radio" checked="checked" name="start" value="0" />否</label>
                                 </eq>
                             </span>
+                            <span class="table_sort_span" style="font-weight: normal;">
+                                 <span class="table_sort_title"><span class="table_star"></span> 每立方米价格：</span>
+                                <input class="table_sort_input" type="text" name="average_price" value="<{$data.average_price}>" maxlength="10" />
+                            </span>
                         </td>
-                </tr>
+                    </tr>
                 <tr class="en-show" style="display:none"><th class="table_th"><span class="table_star"></span></th>
                         <td>
                             <notempty name="st.name">
@@ -101,14 +131,36 @@
                             </notempty>
                         </td>
                     </tr>
-                <tr class="table_tr"><th class="table_th"><span class="table_star"></span> 起步价：</th>
+                    <tr class="table_tr"><th class="table_th"><span class="table_star"></span></th>
                         <td>
-                            <span class="table_radio">
+                            <span class="table_radio" style="visibility:hidden">
                                  <input class="table_sort_input" type="text" name="initiate_price" value="<{$data.initiate_price}>" maxlength="10" />
                             </span>
                             <span class="table_sort_span" style="font-weight: normal;">
-                                 <span class="table_sort_title"><span class="table_star"></span> 每立方米价格：</span>
-                                <input class="table_sort_input" type="text" name="average_price" value="<{$data.average_price}>" maxlength="10" />
+                                <span class="table_sort_title"><span class="table_star"></span> 送货上门：</span>
+                                <span class="table_radio">
+                                    <eq name="data.dropin" value="1">
+                                        <label><input type="checkbox" checked="checked" name="dropin" value="1" />提供</label>　
+                                    <else/>
+                                        <label><input type="checkbox" name="dropin" value="1" />提供</label>　
+                                    </eq>
+                                </span>
+                            </span>
+                        </td>
+                    </tr>
+                     <tr class="table_tr"><th class="table_th"><span class="table_star"></span></th>
+                        <td>
+                            <span class="table_sort_span" style="font-weight: normal;">
+                                 <span class="table_sort_title"><span class="table_star"></span> 送货上门最低价：</span>
+                                <input class="table_sort_input" type="text" value="<{$data.dropin_lowest_price}>" name="dropin_lowest_price" value="0.00" maxlength="10" />
+                            </span>
+                        </td>
+                    </tr>
+                    <tr class="table_tr"><th class="table_th"><span class="table_star"></span></th>
+                        <td>
+                            <span class="table_sort_span" style="font-weight: normal;">
+                                 <span class="table_sort_title"><span class="table_star"></span> 送货上门每立方价格：</span>
+                                <input class="table_sort_input" type="text" value="<{$data.dropin_average_price}>" name="dropin_average_price" value="0.00" maxlength="10" />
                             </span>
                         </td>
                     </tr>
