--- a/admin/Tpl/default/VoteCommodity/edit.html
+++ b/admin/Tpl/default/VoteCommodity/edit.html
@@ -22,7 +22,7 @@
                         <option value="1">是</option>
                         <option value="0" selected="selected">否</option>
                     </eq>
-                </select>　
+                </select>　<!-- 　
                 <strong>推　荐：</strong>
                 <select name="recommend" style="width: 56px;padding: 2px">
                     <eq name="data.recommend" value="1">
@@ -32,21 +32,27 @@
                         <option value="1">是</option>
                         <option value="0" selected="selected">否</option>
                     </eq>
-                </select>
+                </select> -->
+                <strong>销　　量：</strong>
+                <input type="text" name="sales_volume"  value="<{$data.sales_volume|default=0}>" style="width: 50px;text-align: center;height: 18px;" maxlength="10" />　
+                <strong>预订基数：</strong>
+                <input type="text" name="subscribe" value="<{$data.subscribe}>" style="width: 47px;text-align: center;height: 18px;" maxlength="10" />　
+                <strong>已预订数：</strong>
+                <input type="text" name="subscribe_volume" value="<{$data.subscribe_volume|default=0}>" style="width: 47px;text-align: center;height: 18px;" maxlength="10" />　
+                <strong>投 票 数：</strong>
+                <input type="text" name="vote" value="<{$data.vote|default=0}>" style="width: 47px;text-align: center;height: 18px;" maxlength="10" />　
             </li>
             <li class="xnfy520-function-index-add-edit-ul-li" style="margin-top: 3px;">
                 <strong>售　　价：</strong>
                 <input type="text" name="price" value="<{$data.price|default='0.00'}>" style="width: 48px;text-align: center;height: 18px;" maxlength="8" />　
-                <strong>订　金：</strong>
+                <strong>订　　金：</strong>
                 <input type="text" name="subscription" value="<{$data.subscription|default='0.00'}>" style="width: 47px;text-align: center;height: 18px;" maxlength="10" />　
-                <strong>预订基数：</strong>
-                <input type="text" name="subscribe" value="<{$data.subscribe}>" style="width: 47px;text-align: center;height: 18px;" maxlength="10" />　
+                <strong>排　　序：</strong>
+                <input title="值必须在0-255 (必填)" type="text" name="sort"  value="<{$data.sort|default=0}>" style="width: 50px;text-align: center;height: 18px;" maxlength="3" />　
+                <strong>体　　积：</strong>
+                <input type="text" name="measure"  value="<{$data.measure|default=0.00}>" style="width: 50px;text-align: center;height: 18px;" maxlength="8" />　
                 <strong>截止日期：</strong>
                 <input type="text" name="expiration_date" value="<{$data.expiration_date|default=''|date="Y-m-d",###}>" class="Wdate" type="text" onfocus="WdatePicker()" readonly="readonly" style="width: 90px;height: 18px;text-indent:5px" />　
-                <strong>排　序：</strong>
-                <input title="值必须在0-255 (必填)" type="text" name="sort"  value="<{$data.sort|default=0}>" style="width: 50px;text-align: center;height: 18px;" maxlength="3" />　
-                <strong>体　积：</strong>
-                <input type="text" name="measure"  value="<{$data.measure|default=0.00}>" style="width: 50px;text-align: center;height: 18px;" maxlength="8" />
             </li>
             <li class="xnfy520-function-index-add-edit-ul-li" style="margin-top: 5px;height: 50px;background: #d6fffa;padding: 5px 0;">
 
@@ -110,7 +116,7 @@
                     </volist>
                 </select>
                 <span class="stylist_say" style="display:none">
-                    <input type="text" maxlength="50" style="width: 385px;margin: 0 0 0 5px;text-indent: 5px;padding: 2px;" name="stylist_say" value="<{$data.stylist_say}>" />　
+                    <input type="text" maxlength="50" style="width: 335px;margin: 0 0 0 5px;text-indent: 5px;padding: 2px;" name="stylist_say" value="<{$data.stylist_say}>" />　
                 </span>
             </li>
             <li class="texli" style="margin-bottom: 10px;">
