--- a/home/Tpl/default/Member/CommodityOrder.html
+++ b/home/Tpl/default/Member/CommodityOrder.html
@@ -1,7 +1,7 @@
 <layout name='layout'/>
  <div class="mid-xq">
     	<ul>
-          <li class="xq-weizhi">首页 >> <span style="color:#666;">个人中心</span> >> <span style="color:#666;">商品订单</span></li>
+          <li class="xq-weizhi">首页 >> <span style="color:#666;">个人中心</span> >> <span style="color:#666;">我的订单</span></li>
 
       <include file="Member:left" />
 
@@ -11,9 +11,9 @@
               </div>
               <div id="xm-dd2">
                 <div id="xm-wcdd1">
-                  <a class="xm-ds" href="__APP__/Member/commodityOrder">全部订单<span>（<{$numbers[0]|default="0"}>个）</span></a>  
-                  <a class="xm-ds" href="__APP__/Member/commodityOrder/status/1">已付款订单<span>（<{$numbers[1]|default="0"}>个）</span></a>  
-                    <a class="xm-df" href="__APP__/Member/commodityOrder/status/2">待付款订单<span>（<{$numbers[2]|default="0"}>个</span>）</a> 
+                  <a style="width:auto" class="xm-ds" href="__APP__/Member/commodityOrder">全部订单<span>（<{$numbers[0]|default="0"}>个）</span></a>  
+                  <a style="width:auto" class="xm-ds" href="__APP__/Member/commodityOrder/status/1">已付款订单<span>（<{$numbers[1]|default="0"}>个）</span></a>  
+                    <a style="width:auto" class="xm-df" href="__APP__/Member/commodityOrder/status/2">待付款订单<span>（<{$numbers[2]|default="0"}>个</span>）</a> 
                 </div>
               <notempty name="orders">
 
@@ -22,23 +22,39 @@
                         <div class="xm-wcdd2" style="height:auto; overflow:hidden; border:1px solid #ccc; border-bottom:0px;">
                           <table width="730" border="0" cellspacing="0" cellpadding="0">
                             <tr>
-                              <td width="100" height="35" align="center"><span class="xm-wccd1"><{$vo_o.out_trade_no}></span></td>
+                              <td width="100" height="35" align="left">
+                                <eq name="vo_o.commodity_type" value="2" >
+                                  <span style="position:relative;inline-block:display;background:red;color:white;padding:2px;float:right">聚</span>
+                                </eq>
+                                <span class="xm-wccd1" style="margin-left:25px"><{$vo_o.out_trade_no}></span>
+                              </td>
                               <td width="70" height="35" align="center"><span class="xm-wccd3"><{$vo_o.address.consignee}></span></td>
                               <td width="150" height="35" align="center"><span class="xm-wccd4"><{$vo_o.create_date|date="Y-m-d H:i:s",###}></span></td>
                               <td width="200" height="35" align="center">
                                 <span class="xm-wccd5">
-                                <{$vo_o.total_fee}>
-                                (
-                                物流:<{$vo_o.other_data.logistics}>
-                                <notempty name="vo_o.other_data.coupon" value="50">优惠:-<{$vo_o.other_data.coupon}></notempty>
-                                )
+                                <span style="line-height:20px">
+                                    <!-- &#165;<{$vo_o.total_fee}> -->
+                                    <gt name="vo_o.new_price" value="0">
+                                        <s>&#165;<{$vo_o.total_fee}></s> 
+                                        <span style="color:red">&#165;<{$vo_o.new_price}></span>
+                                    <else/>
+                                        &#165;<{$vo_o.total_fee}>
+                                    </gt>
+                                </span><br />
+                                <span style="line-height:20px">(含物流:&#165;<{$vo_o.other_data.logistics}>)</span>
+                                <notempty name="vo_o.other_data.coupon" value="50"><br /><span style="line-height:20px">已优惠:-<{$vo_o.other_data.coupon}></span></notempty>
+                                
                                 </span>
                               </td>
                               <td width="50" height="35" align="center"><span class="xm-wccd6">
                                 <eq name="vo_o.pay_type" value="0">
                                   <a target="_blank" href="__APP__/Pay/alipay_to_cart/out_trade_no/<{$vo_o.out_trade_no}>">未付款</a>
                                 <else/>
-                                  已付款
+                                  <empty name="vo_o.shipments_data">
+                                    已付款
+                                  <else/>
+                                    已完结
+                                  </empty>
                                 </eq>
                               </span></td>
                               <td width="50" height="35" align="center"><a class="xm-xindd9">展开</a></td>
@@ -57,7 +73,7 @@
                                   </volist>
                                   <tr>
                                       <td style="text-align:left;text-indent:14px;height:30px" colspan="3">
-                                      收货地址:<{$vo_o.address.where_text}> <{$vo_o.address.street}> (<{$vo_o.address.zip}>) <notempty name="vo_o.address.cellphone">手机号:<{$vo_o.address.cellphone}></notempty> <notempty name="vo_o.address.phone">电话:<{$vo_o.address.phone}></notempty> 收货人:<{$vo_o.address.consignee}>
+                                      收货地址:<{$vo_o.address.where_text}> <{$vo_o.address.street}> <notempty name="vo_o.address.cellphone">手机号:<{$vo_o.address.cellphone}></notempty> <notempty name="vo_o.address.phone">电话:<{$vo_o.address.phone}></notempty> 收货人:<{$vo_o.address.consignee}>
                                       </td>
                                       <td style="text-align:right;padding-right:12px" colspan="2">
                                         <gt name="vo_o.pay_type" value="0">
@@ -71,6 +87,13 @@
                                         </gt>
                                       </td>
                                   </tr>
+                                  <notempty name="vo_o.remark">
+                                    <tr>
+                                      <td style="text-align:left;text-indent:14px;height:30px" colspan="4">
+                                        <storng>备注信息: <{$vo_o.remark}></storng>
+                                      </td>
+                                    </tr>
+                                  </notempty>
                                 </table>
                             </notempty>
                         </div>
